sort adapt